desktop not that cool

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         ensure that your project is sucessful
       </h5>
     </article>
-    <div class="first card">
+    <div class="grid-container">
+    <div class="first card" id="Supervisor">
       <h4 id="card-header">Supervisor</h4>
       <h6 id="card-body">Monitors activities to monitor project 
       roadblocks</h6>
@@ -32,7 +33,7 @@
         <img src="/images/icon-supervisor.svg" >
       </span>
     </div>
-    <div class="second card">
+    <div class="second card" id="builder">
       <h4 id="card-header">Team Builder</h4>
       <h6 id="card-body">Scans our talent network to create
         the optimal team for your project
@@ -41,7 +42,7 @@
         <img src="/images/icon-team-builder.svg">
       </span>
     </div>
-    <div class="third card">
+    <div class="third card" id="Karma">
       <h4 id="card-header">Karma</h4>
       <h6 id="card-body">
         Regularly evaluate our talent to ensure quality
@@ -50,7 +51,7 @@
         <img src="/images/icon-karma.svg">
       </span>
     </div>
-    <div class="fourth card">
+    <div class="fourth card" id="Calculator">
       <h4 id="card-header">Calculator</h4>
       <h6 id="card-body">Uses data from past projects to provide
         better delivery estimates
@@ -58,6 +59,7 @@
       <span id="image">
         <img src="/images/icon-calculator.svg">
       </span>
+    </div>
     </div>
 
 
