--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="/images/icon-supervisor.svg" >
       </span>
     </div>
-    <div class="second card" id="builder">
+    <div class="second card" id="Builder">
       <h4 id="card-header">Team Builder</h4>
       <h6 id="card-body">Scans our talent network to create
         the optimal team for your project
